[metadata]
name = cool_mapMapboxRoute
version = 0.0.2
author = Swarup Adhikary
author_email = swarupovo@gmail.com
description = For generating route path and estimated time
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swarupOGM/mapbox_route_estimation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
include_package_data = True