[metadata]
name = coolmaproute_path
version = 0.0.1
author = Swarup Adhikary
author_email = 
description = For generating route path and estimated time and distance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/swarupOGM/mapbox_route_estimation
keywords = ['Mapbox', 'Coolmap Route Estimation']
classifiers=[
        'Development Status :: 3 - Alpha',      # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
        'Intended Audience :: Developers',      # Define that your audience are developers
        'Topic :: Software Development :: Build Tools',
        'License :: OSI Approved :: MIT License',   # Again, pick a license
        'Programming Language :: Python :: 3',      #Specify which pyhton versions that you want to support
    ]

[options]
packages = find:
python_requires = >=3.5
include_package_data = True