[metadata]
name = coolmaproutepath
version = 0.0.2
author = Swarup Adhikary
description = For generating route path and estimated time and distance
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ['Mapbox', 'Coolmap Route Estimation']
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
include_package_data = True